infrastructure/backend/deploy-backend.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ${BRANCH}-backend
spec:
  selector:
    matchLabels:
      app: ${BRANCH}-backend
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: ${BRANCH}-backend
    spec:
      volumes:
        - name: volume-master-data
          persistentVolumeClaim:
            claimName: pvc-master-data
      containers:
        - name: ${BRANCH}-backend
          image: ${CONTAINER_REPO}:backend-${BRANCH}-${GITHUB_SHA}
          volumeMounts:
            - mountPath: "/data"
              name: volume-master-data
          readinessProbe:
            httpGet:
              path: /health
              port: 1337
            initialDelaySeconds: 15
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 1337

---

apiVersion: v1
kind: Service
metadata:
  name: ${BRANCH}-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 1337
  selector:
    app: ${BRANCH}-backend

---

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ${BRANCH}-backend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - ${BRANCH}-backend.services.viggosdetour.com
      secretName: ${BRANCH}-backend-tls
  ingressClassName: nginx
  rules:
  - host: ${BRANCH}-backend.services.viggosdetour.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${BRANCH}-backend
            port:
              number: 80
